fixed the video width so it doesnt break on bigger screens

--- a/src/css/components/_components.masthead.scss
+++ b/src/css/components/_components.masthead.scss
@@ -143,7 +143,7 @@
   right: 0;
   width: auto;
   top: 0;
-  max-width: 1500px;
+  // max-width: 1500px;
 }
 .masthead--overlay {
   position: relative;
